src/css/index.css
/* ... */
pre .pun { color:  var(---post-text-color);}    /* punctuation */
pre .pln { color: var(---post-text-color); }    /* plaintext */
    :root {
        --header-height: 300px;
        --header-bg-image: url("/images/bg/breakfast.png");
        --side-bg-image:  url("https://static.tumblr.com/r4e6ztn/A4Nqe7imb/sandwich.png");
        --image-id: url("https://media-exp1.licdn.com/dms/image/C4E03AQFfRY7jUxA8sA/profile-displayphoto-shrink_200_200/0/1604246448737?e=1614816000&v=beta&t=PH9Am_xSkie-UjnCvUnU2LSS0aV77vh8OuFZnSoJQsw");
        /***Colors***/
        --body-bg-color: #EEEEEE;
        --blockquote-color: #ffd4c3;
        --header-bg-color: #3c3e4f;
        --header-title-color:  rgba(112, 247, 235, 0.8);
        --header-sub-color: #eeeeee;
        --accent-color: #ffd4c3;
        --sidebar-bg-color: #fbf7ef;
        --sidebar-title-color: #4b4f5a;
        --sidebar-text-color: #4b4f5a;
        --sidebar-link-color: #fbf2a4;
        --sidebar-link-hover-color: #edcf76;
        --featured-post-color: #feb195;
        --post-bg-color: #F6F6F6;
        --post-title-color: #666666;
        --post-text-color: #4b4f5a;
        --post-link-color: #fbf4b8;
        --post-link-hover-color: #fbf4b8;
        --answer-bg-color: #f8dcb3;
        --ask-bg-color: #febd80;
        /***Fonts***/
        --header-title-font:'Mogra', cursive;
        --header-sub-font: 'Open Sans', sans-serif;
        --sidebar-title-font: 'Bitter', serif;
        --sidebar-text-font: 'Open Sans', sans-serif;
        --post-title-font: 'Bitter', serif;
        --post-text-font: 'Open Sans', sans-serif;
        --quote-text-font: '1785 GLC Baskerville', serif;
    }
    * {   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
      box-sizing: border-box; }
      body, html {
        padding: 0px;
        margin: 0px;
      }
    body {
        background-color:var(--body-bg-color);
        font-size:18px;
        font-family: var(--post-text-font);
        background: url("/images/bg/handmadepaper.png");
        line-height: calc(18px + 10px);
        overflow-x:hidden;
        display: grid;
    }
    .sr-only {
        float: left;
        left: -1000px;
        width: 1px;
        z-index: -10;
        overflow: hidden;
        position: absolute;
    }
    .sr-only:focus {
        float: left;
        left: auto;
        top: auto;
        width: auto;
        overflow: auto;
        z-index: 200;
    }
    a:active, .sr-only:focus {
        outline-style:dashed;
        outline-color:red;
        outline-width:2px;
    }
    ::-webkit-scrollbar {
  height: 1rem;
}

::-webkit-scrollbar-track {
  background-color: var(--body-bg-color);
  border: 1px solid var(--header-bg-color);
  border-radius: 0.25rem;
}

::-webkit-scrollbar-thumb {
  background-color: var(--post-link-color);
  border: 1px solid var(--header-bg-color);
  border-radius: 0.25rem;
}
    button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
  border:none;
}
      a:focus,button:focus {
        outline-style:solid;
        outline-color:red;
        outline-width:2px;
    }
    h1, h2, h3, h4 {
        font-family: var(--post-title-font);
    }
    h1 {
        font-size:calc(18px + 30px);
        line-height:calc(18px + 50px);;
    }
    h2 {
        font-size:calc(18px + 20px);
        line-height:calc(18px + 35px);
    }
    h3 {
        font-size:calc(18px + 10px);
    } 
        #header {
           background: var(--header-bg-color) var(--header-bg-image);
        background-position: right;
        background-repeat: no-repeat;
        background-size: 40%;
        width: 100%;
        font-family: var(--header-sub-font);
        color: var(--header-sub-color);
        margin-bottom:4%;
        position:relative;
        clear: both;
    } 
 .header_content {
       width:100%;
        padding:5%;     
 }
 .id_card {
     display: flex;
     align-items: center;
     font-size: 26px;
 }
 #header a {
    text-decoration: none;
    color: var(--post-link-color);
 }
 #header .tags {
     color: var(--post-link-color);
     box-shadow: inset 0 -8px 0 0 rgba(112, 247, 235, 0.5);
     transition: 1s;
 }
 #header .tags:hover {
    color: var(--post-text-color);
    box-shadow: inset 0 -30px 0 0 var(--post-link-hover-color);
}
 .image_id {
     height: 65px;
     width: 65px;
     border-radius: 50%;
     border: 2px solid var(--header-title-color);
     background: var(--image-id);
     background-size: 65px;
     margin-right: 65px;
 }
    #header h1 {
        font-family: var(--header-title-font);
        color: var(--header-title-color);
    }
    #side {
        min-width: 30%;
        font-family: var(--sidebar-text-font);
        color:var(--sidebar-text-color);
      background-color: var(--sidebar-bg-color);
      z-index:10;
      background-image: var(--side-bg-image);
      background-size: 550px;
      background-attachment: fixed;
      background-repeat: no-repeat;
      background-position: 13% 26%;
    }
    #side_content {
        padding: 5%;
        box-sizing: border-box;
    }
    #side_content h1, #side_content h2, #side_content h3, #side_content  h4,#side_content h5, #side_content ul li a b {
         font-family: var(--sidebar-title-font);
    }
    #side_content a {
        color: var(--sidebar-text-color);
        box-shadow: inset 0 -8px 0 0 var(--accent-color);
        border-bottom: 2px solid var(--sidebar-text-color);
        text-decoration: none;
        transition: 1s;
    }
    #side_content a:hover {
        box-shadow:inset 0 -26px 0 0 var(--accent-color);
    }
    #side_content ul {
         list-style-type:none;
         padding:0px;
         margin:0px;
     }
     #side_content ul li p a {
           color:var(--idebar-text-color);
           box-shadow:inset 0 -8px 0 0 var(--sidebar-link-color);
           border-bottom:1px solid var(--post-text-color);
           text-decoration:none;
           transition:1s;
      }
/* ... */

